# universal-agent-studio

./: LICENSE  README.md  bandit.yaml  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: ci_build.yml
scripts/: setup.bat  setup.sh  update_requirements.bat  update_requirements.sh
src/: main.py
src/pages/: chat_page.py  mcp_marketplace.py  model_marketplace.py
